--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -29,6 +29,9 @@
             android:id="@+id/nav_to_be_received"
             android:title="@string/to_be_received"
             android:icon="@drawable/menu_to_be_received"/>
+        <item
+            android:id="@+id/nav_notification"
+            android:title="NO"/>
     </group>
 
     <item android:title="General">
