--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorDarkRed">#9D2F42</color>
     <color name="colorDarkBlue">#646687</color>
     <color name="colorLightGrey">#E1E6E2</color>
+    <color name="colorBlack">#000000</color>
 
     <!--For Dashboard-->
 
