--- a/app/src/main/res/layout/activity_orders_to_be_received.xml
+++ b/app/src/main/res/layout/activity_orders_to_be_received.xml
@@ -9,28 +9,33 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <RelativeLayout
+            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <ImageView
+                android:layout_marginTop="10dp"
                 android:id="@+id/onbackbtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/arrowback"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"/>
+                android:padding="10dp"
+                android:src="@drawable/general_back_icon" />
 
             <TextView
-                android:layout_centerHorizontal="true"
-                android:id="@+id/title"
+                android:textColor="@color/colorWhite"
+                android:fontFamily="@font/muli_black"
+                android:textSize="25sp"
+                android:id="@+id/titleOrderToRec"
                 android:layout_width="wrap_content"
+                android:padding="10dp"
+                android:layout_marginTop="40dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:minHeight="?actionBarSize"
-                android:padding="@dimen/appbar_padding"
                 android:text="@string/title_activity_orders_to_be_received"
                 android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
         </RelativeLayout>
@@ -38,7 +43,7 @@
             android:id="@+id/tabs_orderstobereceived"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary" />
+            android:background="?attr/colorAccent" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
