--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -30,8 +30,10 @@
             android:title="@string/to_be_received"
             android:icon="@drawable/menu_to_be_received"/>
         <item
-            android:id="@+id/nav_notification"
-            android:title="NO"/>
+            android:id="@+id/nav_revieworder"
+            android:title="Review Order"
+            android:icon="@drawable/revieworder"
+            />
     </group>
 
     <item android:title="General">
