--- a/app/src/main/res/layout/activity_post_request_page_two.xml
+++ b/app/src/main/res/layout/activity_post_request_page_two.xml
@@ -62,6 +62,7 @@
                 app:startIconTint="@color/colorAccent">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txtPostDesc"
                     android:layout_width="match_parent"
                     android:layout_height="159dp"
                     android:fontFamily="@font/muli_light"
@@ -87,6 +88,7 @@
                 app:endIconTint="@color/colorAccent">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txtPostBudget"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/muli_light"
@@ -96,6 +98,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
+                android:id="@+id/btnSubmitPostRequest"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="80dp"
