IT19063560 | Some Design Changes

--- a/app/src/main/res/layout/activity_post_a_request_home.xml
+++ b/app/src/main/res/layout/activity_post_a_request_home.xml
@@ -8,7 +8,7 @@
     <ListView
         android:id="@+id/postlist"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="620dp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp"
@@ -28,19 +28,21 @@
         android:layout_marginBottom="24dp"
         android:text="You Posted X Requests"
         android:textSize="20sp"
+        android:fontFamily="@font/mido"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/postadd"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/postadd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="13dp"
-        android:text=" Add"
-        android:background="@drawable/rounded_button"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="18dp"
+        android:text="+"
+        android:textSize="30sp"
+        android:background="@drawable/add_rounded_button"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
