--- a/app/src/main/res/layout/orderstoberecieved_processing_listitem.xml
+++ b/app/src/main/res/layout/orderstoberecieved_processing_listitem.xml
@@ -4,10 +4,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/orderstobeRecProcessingCard"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     android:layout_margin="10dp"
     android:layout_marginTop="10dp">
 
@@ -19,7 +21,7 @@
         <LinearLayout
             android:padding="10dp"
             android:layout_width="120dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -35,82 +37,73 @@
                 android:text="#123"
                 android:textSize="25dp"
                 android:textColor="@color/colorAccent"/>
-            100dp
+
+            <TextView
+                android:id="@+id/OrdersToBeRecProcessingSeller"
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="to: abc"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:padding="10dp"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/ordersToBeRecProcessingEmail"
                 android:layout_marginTop="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="abc@gmail.com"/>
 
 
             <TextView
-                android:id="@+id/OrdersToBeRecListDate"
+                android:id="@+id/OrdersToBeRecListSubmitDate"
                 android:layout_marginTop="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="2020/09/09"/>
+
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="100dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="10dp">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Price:"/>
 
             <TextView
                 android:id="@+id/ordersToBeRecListPrice"
                 android:layout_marginTop="5dp"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="$200"
-                android:textSize="30dp"
+                android:textSize="20dp"
                 android:textColor="@color/colorDarkRed"/>
 
-            <TextView
-                android:id="@+id/OrdersToBeRecProcessingBuyer"
-                android:layout_marginTop="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="by: abc"/>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="180dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="10dp">
+        <ImageView
+            android:id="@+id/ordersToBeRecCheck"
+            android:layout_marginTop="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_check_24"
+            android:padding="20dp"
+            android:visibility="invisible"/>
 
-            <Button
-                android:id="@+id/btnUpdateOrderBeRecProcessing"
-                android:padding="10dp"
-                android:textSize="10dp"
-                android:text="Update Order"
-                android:layout_width="150dp"
-                android:layout_height="40dp"
-                android:background="@color/colorAccent"
-                android:textColor="@color/colorWhite"/>
-
-            <Button
-                android:id="@+id/btnCancelOrderBeRecProcessing"
-                android:layout_marginTop="10dp"
-                android:layout_width="150dp"
-                android:layout_height="40dp"
-                android:textSize="10dp"
-                android:textColor="@color/colorWhite"
-                android:background="@color/colorDarkRed"
-                android:text="Cancel Order"/>
-
-
-
-        </LinearLayout>
 
 
 
