--- a/app/src/main/res/layout/orderstome_processing_listitem.xml
+++ b/app/src/main/res/layout/orderstome_processing_listitem.xml
@@ -3,12 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/orderstomeProcessingCard"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
     android:layout_margin="10dp"
     android:layout_marginTop="10dp">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +19,7 @@
         <LinearLayout
             android:padding="10dp"
             android:layout_width="120dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -27,93 +28,74 @@
                 android:text="Order ID:"/>
 
             <TextView
-                android:id="@+id/OrdersToMeProcessingOrderId"
+                android:id="@+id/OrdersToMeProcessingOrderIdItem"
                 android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="#123"
                 android:textSize="25dp"
                 android:textColor="@color/colorAccent"/>
-100dp
+
+            <TextView
+                android:id="@+id/OrdersToMeProcessingBuyer"
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="to: abc"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:padding="10dp"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/ordersToMeProcessingEmail"
                 android:layout_marginTop="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="abc@gmail.com"/>
 
 
             <TextView
-                android:id="@+id/OrdersToMeListDate"
+                android:id="@+id/OrdersToMeListSubmitDate"
                 android:layout_marginTop="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="2020/09/09"/>
+
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="100dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="10dp">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Price:"/>
 
             <TextView
                 android:id="@+id/ordersToMeListPrice"
                 android:layout_marginTop="5dp"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="$200"
-                android:textSize="30dp"
+                android:textSize="20dp"
                 android:textColor="@color/colorDarkRed"/>
 
-            <TextView
-                android:id="@+id/OrdersToMeProcessingBuyer"
-                android:layout_marginTop="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="by: abc"/>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="180dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="10dp">
-
-            <Button
-                android:id="@+id/btnCompleteOrderProcessing"
-                android:padding="10dp"
-                android:textSize="10dp"
-                android:text="Complete Order"
-                android:layout_width="150dp"
-                android:layout_height="40dp"
-                android:background="@color/colorAccent"
-                android:textColor="@color/colorWhite"/>
-
-            <Button
-                android:id="@+id/btnCancelOrderProcessing"
-                android:layout_marginTop="10dp"
-                android:layout_width="150dp"
-                android:layout_height="40dp"
-                android:textSize="10dp"
-                android:textColor="@color/colorWhite"
-                android:background="@color/colorDarkRed"
-                android:text="Cancel Order"/>
-
-
-
-        </LinearLayout>
 
 
 
     </LinearLayout>
-
 
 </androidx.cardview.widget.CardView>
