herschelle - final without back btns

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -81,6 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
         android:text="Old Password"
+        android:fontFamily="@font/muli_black"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/oldPass"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,6 +96,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
         android:text="New Password"
+        android:fontFamily="@font/muli_black"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/newPass"
         app:layout_constraintEnd_toEndOf="parent"
@@ -109,6 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
         android:text="Confirm New password"
+        android:fontFamily="@font/muli_black"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/renewPass"
         app:layout_constraintEnd_toEndOf="parent"
