--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -16,6 +16,7 @@
         android:text="@string/name1"
         android:textColor="@color/colorWhite"
         android:textSize="20dp"
+        android:fontFamily="@font/muli_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.346"
@@ -45,6 +46,7 @@
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:textSize="20dp"
+        android:fontFamily="@font/muli_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
@@ -59,6 +61,7 @@
         android:text="@string/mainp"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="25dp"
+        android:fontFamily="@font/muli_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,6 +76,7 @@
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:textSize="20dp"
+        android:fontFamily="@font/muli_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
