--- a/app/src/main/res/layout/activity_contactus.xml
+++ b/app/src/main/res/layout/activity_contactus.xml
@@ -35,7 +35,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.039"
-        app:srcCompat="@drawable/general_back_icon" />
+        app:srcCompat="@drawable/general_back_icon"
+        tools:ignore="VectorDrawableCompat" />
 
     <TextView
         android:id="@+id/textView7"
@@ -44,6 +45,7 @@
         android:text="@string/conname"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20dp"
+        android:fontFamily="@font/muli_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.179"
@@ -75,6 +77,7 @@
         android:text="@string/conusd"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20dp"
+        android:fontFamily="@font/muli_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.207"
