--- a/app/src/main/res/layout/activity_contactus_success.xml
+++ b/app/src/main/res/layout/activity_contactus_success.xml
@@ -49,6 +49,16 @@
             android:textColor="@color/colorAccent"
             android:textSize="14sp" />
 
+        <Button
+            android:id="@+id/btnchangesuccess"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_button"
+            android:onClick="backhome"
+            android:text="Home" />
+
+
 
 
 
