--- a/app/src/main/res/layout/activity_password_change_success.xml
+++ b/app/src/main/res/layout/activity_password_change_success.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
     android:padding="30dp"
-    tools:context=".Common.AccountCreateSuccessfully"
+    tools:context=".Common.passwordChangeSuccess"
     android:orientation="vertical">
 
     <ImageView
@@ -48,6 +48,15 @@
             android:textAlignment="center"
             android:textColor="@color/colorAccent"
             android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/btnchangesuccess"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_button"
+            android:onClick="changpasslogoutPage"
+            android:text="logout" />
 
 
 
