--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -48,48 +48,40 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/profile" />
 
+
     <Button
-        android:id="@+id/button"
+        android:id="@+id/viewbtn"
         android:layout_width="150dp"
         android:layout_height="25dp"
         android:layout_marginBottom="190dp"
-        android:text="Update Info"
-        android:textSize="13dp"
-        android:textColor="@color/colorWhite"
         android:background="@drawable/changepasswordbtn"
+        android:text="View profile"
+        android:textColor="@color/colorWhite"
+        android:textSize="13dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView8" />
-
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="340dp"
-        android:text="Name"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView8" />
-
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="265dp"
-        android:text="@string/uname"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView8" />
+        app:layout_constraintTop_toTopOf="@+id/imageView8"
+        app:layout_constraintVertical_bias="0.364" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/updatebutton"
+        android:layout_width="150dp"
+        android:layout_height="25dp"
+        android:background="@drawable/changepasswordbtn"
+        android:text="Edit profile"
+        android:textColor="@color/colorWhite"
+        android:textSize="13dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.413" />
+
+    <Button
+        android:id="@+id/changepass"
         android:layout_width="283dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -114,10 +106,11 @@
         android:text="@string/contact1"
         android:textColor="@color/colorWhite"
         android:textSize="20dp"
+        android:onClick="contactus"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/changepass"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
@@ -126,7 +119,7 @@
         android:layout_width="283dp"
         android:layout_height="50dp"
         android:background="@drawable/btn2"
-
+        android:onClick="aboutuspage"
         android:text="@string/name1"
         android:textColor="@color/colorWhite"
         android:textSize="20dp"
@@ -149,8 +142,22 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:onClick="callLogout"
         app:layout_constraintTop_toBottomOf="@+id/aboutus"
         app:layout_constraintVertical_bias="0.964" />
+
+    <Button
+        android:id="@+id/user_deact"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="#00000000"
+        android:text="@string/deact"
+        android:textColor="@color/colorDarkRed"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button5"
+        app:layout_constraintVertical_bias="0.134"
+        tools:layout_editor_absoluteX="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
