--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -41,12 +41,12 @@
                 android:src="@drawable/menu_icon"/>
 
             <ImageView
+                android:id="@+id/settings"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:background="@drawable/add_account_button"
-                android:onClick="callLoginSignupScreen"
                 android:contentDescription="@string/todo"
                 android:padding="5dp"
                 android:src="@drawable/add_account_icon"/>
