--- a/app/src/main/res/layout/activity_buyer_request_user.xml
+++ b/app/src/main/res/layout/activity_buyer_request_user.xml
@@ -214,6 +214,7 @@
                 android:layout_marginBottom="20dp">
 
                 <Button
+                    android:id="@+id/callButton"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
