--- a/app/src/main/res/layout/buyer_request_card.xml
+++ b/app/src/main/res/layout/buyer_request_card.xml
@@ -8,6 +8,8 @@
     android:paddingLeft="8dp"
     android:paddingTop="8dp"
     android:paddingEnd="8dp"
+    android:layout_margin="8dp"
+    app:layout_constraintCircleRadius="4dp"
     android:paddingRight="8dp">
 
     <TextView
