--- a/app/src/main/res/layout/postrequest_card.xml
+++ b/app/src/main/res/layout/postrequest_card.xml
@@ -8,7 +8,9 @@
     android:paddingLeft="8dp"
     android:paddingTop="8dp"
     android:paddingEnd="8dp"
-    android:paddingRight="8dp">
+    android:paddingRight="8dp"
+    android:layout_margin="8dp"
+    app:layout_constraintCircleRadius="4dp">
 
     <TextView
         android:id="@+id/title"
