--- a/app/src/main/res/layout/activity_view__gig__for__customer.xml
+++ b/app/src/main/res/layout/activity_view__gig__for__customer.xml
@@ -191,7 +191,7 @@
                     >
 
                     <Button
-                        android:id="@+id/updatebutten_byadmin"
+                        android:id="@+id/purchaseBtn"
                         android:layout_width="90dp"
                         android:layout_height="60dp"
                         android:text="@string/purchasegigbutton">
