--- a/app/src/main/res/layout/activity_create__a__gig.xml
+++ b/app/src/main/res/layout/activity_create__a__gig.xml
@@ -163,7 +163,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="@string/advance_amount_topic"
+                    android:text="Sub Total"
                     android:textColor="#000000"
                     android:textSize="18sp"
                     android:textStyle="bold"/>
@@ -171,7 +171,7 @@
                     android:id="@+id/txt_advance"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:hint="@string/advance_amount"
+                    android:hint="Sub Total"
                     android:inputType="numberDecimal"
                     android:textSize="20dp"
                     android:paddingLeft="10dp"
@@ -181,7 +181,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="@string/second_amount"
+                    android:text="Service Charge"
                     android:textColor="#000000"
                     android:textSize="18sp"
                     android:textStyle="bold"/>
@@ -189,7 +189,7 @@
                     android:id="@+id/txt_second_amount"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:hint="@string/second_amount"
+                    android:hint="Service Charge"
                     android:inputType="numberDecimal"
                     android:textSize="20dp"
                     android:paddingLeft="10dp"
